start of new README

--- a/PythonDataStructures.ipynb
+++ b/PythonDataStructures.ipynb
@@ -1466,11 +1466,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Essential Basic Functionality\n",
+    "---\n",
+    "\n",
+    "## Pandas Essential Basic Functionality\n",
     "\n",
     "https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html\n",
     "\n",
-    "pandas is well suited for many different kinds of data, but most of the time we use it for **tabular data with heterogeneously-typed columns**, as in an SQL table or Excel spreadsheet\n",
+    "Pandas is well suited for many different kinds of data, but most of the time we use it for **tabular data with heterogeneously-typed columns**, as in an SQL table or Excel spreadsheet\n",
     "\n",
     "Here are just a few of the things that Pandas does well:\n",
     "\n",
@@ -1483,6 +1485,13 @@
     "- Robust IO tools for loading data from flat files (CSV and delimited), Excel files, databases, and saving / loading data from the ultrafast HDF5 format\n",
     "- Time series-specific functionality: date range generation and frequency conversion, moving window statistics, date shifting and lagging, etc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
