--- a/TidyDataIntro.ipynb
+++ b/TidyDataIntro.ipynb
@@ -39,15 +39,11 @@
     }
    },
    "source": [
-    "### Data structure\n",
+    "### Typical sample data – two experimental conditions\n",
     "\n",
-    "We focus here on tabluar data, which are rectangular \"spreadsheets\" made up of **rows** and **columns**.\n",
+    "In this workshop we will mostly load data in from commma-separated value (CSV) files, but here I will use one of the many methods to create them manually, just so you've seen an example.\n",
     "\n",
-    "[Pandas](https://pandas.pydata.org/) is the Python module that lets you store and manipulate tablular data. There are a lot of great online documentation and tutorials on Pandas, including the [10 minutes to Pandas tutorial on the offical documentation site](https://pandas.pydata.org/pandas-docs/stable/10min.html).\n",
-    "\n",
-    "In Pandas this data is stored in a `DataFrame`. There are many ways to create DataFrames. In this workshop we will mostly load data in from commma-separated value (CSV) files, but here I will use one of the many methods to create them manually, just so you've seen an example.\n",
-    "\n",
-    "All columns have a name, and each row has an Index. Here we start with two columns, \"treatment a\" and \"treatment b\", each containing results of measurements that were made during the two treatments. The names of the people treated are used as the row indices."
+    "We have three people (rows) and their results (in columns) from two different treatments."
    ]
   },
   {
@@ -86,17 +82,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>John</td>\n",
+       "      <th>John</th>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Jane</td>\n",
+       "      <th>Jane</th>\n",
        "      <td>16.0</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Mary</td>\n",
+       "      <th>Mary</th>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -131,7 +127,7 @@
     }
    },
    "source": [
-    "If we transpose the rows and columns, it's somehow the same data, but we need a way to talk about the information contained here, and understand what structure will lead us to the easiest analysis and visualization"
+    "**If we transpose the rows and columns, it's somehow the same data**, but we need a way to talk about the information contained here, and understand what structure will lead us to the easiest analysis and visualization"
    ]
   },
   {
@@ -171,13 +167,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>treatment a</td>\n",
+       "      <th>treatment a</th>\n",
        "      <td>NaN</td>\n",
        "      <td>16.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>treatment b</td>\n",
+       "      <th>treatment b</th>\n",
        "      <td>2.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>1.0</td>\n",
@@ -219,8 +215,8 @@
     "\n",
     "Think of a **table** as a spreadsheet of **values**, describing the attributes of a type of thing which can be named, like people, corporations, phone numbers, trips people took, recipes, ingredients, experimental measurements, etc.\n",
     "\n",
-    "- The rows are the individual instances of that thing the table is recording\n",
-    "- The columns describe the various attributes of that individual instance of the thing\n",
+    "- **The rows are the individual instances of that thing the table is recording**\n",
+    "- **The columns describe the various attributes of that individual instance of the thing**\n",
     "\n",
     "So, every value belongs to a **variable** (column) and an **observation** (row)\n",
     "\n",
@@ -228,6 +224,8 @@
     "- An **observation** contains all **values** recorded on one instance or unit (one person, one day, one trip, one company, one letter someone wrote...)\n",
     "\n",
     "---\n",
+    "\n",
+    "### Reorganized data for better analysis\n",
     "\n",
     "We will reorganize the previous table to make the **values**, **variables** and **observations** more clear. \n"
    ]
@@ -269,37 +267,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>John</td>\n",
        "      <td>a</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Jane</td>\n",
        "      <td>a</td>\n",
        "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Mary</td>\n",
        "      <td>a</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>John</td>\n",
        "      <td>b</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Jane</td>\n",
        "      <td>b</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Mary</td>\n",
        "      <td>b</td>\n",
        "      <td>1.0</td>\n",
@@ -331,8 +329,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Easy math\n",
+    "\n",
+    "It's now easy to aggregate values to get an overview of results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['result'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Easy splitting by categories\n",
+    "\n",
+    "And we can make comparisons between categories easily, too!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -369,42 +405,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>a</td>\n",
-       "      <td>19.0</td>\n",
+       "      <th>a</th>\n",
+       "      <td>9.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>b</td>\n",
-       "      <td>14.0</td>\n",
+       "      <th>b</th>\n",
+       "      <td>4.666667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           result\n",
-       "treatment        \n",
-       "a            19.0\n",
-       "b            14.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.groupby(\"treatment\").sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['John', 'Jane', 'Mary'], dtype=object)"
+       "             result\n",
+       "treatment          \n",
+       "a          9.500000\n",
+       "b          4.666667"
       ]
      },
      "execution_count": 6,
@@ -413,13 +429,71 @@
     }
    ],
    "source": [
-    "df2.person.unique()"
+    "df2.groupby(\"treatment\").mean()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Easy to see unique values in each categorical attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['John', 'Jane', 'Mary'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['person'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### or, additionally, how many of each there are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    3\n",
+       "b    3\n",
+       "Name: treatment, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['treatment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A new way to think about the data\n",
+    "\n",
     "The dataset contains 18 values representing 3 variables and 6 observations\n",
     "\n",
     "1. **person**, with three possible values (John, Mary and Jane)\n",
@@ -431,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tidy data\n",
+    "# Tidy data\n",
     "\n",
     "Tidy data is a standard way of mapping the meaning of a dataset to its structure. *A dataset is messy or tidy depending on how rows, columns and tables are matched up with observations, variables and types.*\n",
     "\n",
@@ -445,10 +519,21 @@
     "\n",
     "---\n",
     "\n",
+    "### Dimensions\n",
+    "\n",
     "*Fixed variables* describe the experimental design and are known in advance. These are often called (as in Tableau) **dimensions**.\n",
+    "\n",
+    "### Measures\n",
     "\n",
     "*Measured varibles* are what we actually measure in the experiment/study. These are called **measures**."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -468,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
