reworked mainly TidyDataWork for new structure and simplicity

--- a/NonExplodeLists.ipynb
+++ b/NonExplodeLists.ipynb
@@ -116,110 +116,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Referring to columns with quoted name in side square brackets\n",
-    "\n",
-    "We can refer to a specific column either with square brackets with the name in quotes (which is the necessary form if the column name has spaces in it). Each column by itself, taken out of the DataFrame, is not a DataFrame, but a \"Series\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Bobby\n",
-       "1       Sue\n",
-       "2    Tamika\n",
-       "3      Cale\n",
-       "4      Iris\n",
-       "Name: name, dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ps[\"name\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Referring to columns with dataframe.name\n",
-    "\n",
-    "If the name doesn't have spaces in it, we can use the \"dot notation\", with the dataframe variable name \".\" column name. \n",
-    "\n",
-    "*Note: Although this works the same as the bracket notation, there are good arguments for sticking consistently with the bracket notation rather than dot. See the [Minimally Sufficient Pandas article](https://medium.com/dunder-data/minimally-sufficient-pandas-a8e67f2a2428) for more details."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Bobby\n",
-       "1       Sue\n",
-       "2    Tamika\n",
-       "3      Cale\n",
-       "4      Iris\n",
-       "Name: name, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ps.name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### String `.str` operations will be applied to each row\n",
-    "\n",
-    "A simple string function is to make everything lowercase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     bobby\n",
-       "1       sue\n",
-       "2    tamika\n",
-       "3      cale\n",
-       "4      iris\n",
-       "Name: name, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ps[\"name\"].str.lower()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Splitting strings on a delimiter character\n",
     "\n",
     "Here we do a \"splitting\" operation on the column to split what is currently a single string containing commas, into a list of the items between the commas.\n",
@@ -420,17 +316,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now back to the States dataset\n",
+    "## Melting data across columns into rows\n",
     "\n",
     "- id_vars will be repeated and not un-pivoted\n",
     "- all others will be melted down into a single column (values)\n",
@@ -694,290 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "### Side note on dropping columns by specifying a subset to keep\n",
-    "\n",
-    "A common way to drop columns is to select the subset of columns you'd like to keep and assign that to a new or the same variable:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bobby</td>\n",
-       "      <td>Wyoming</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tamika</td>\n",
-       "      <td>Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cale</td>\n",
-       "      <td>South Dakota</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iris</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     name         state\n",
-       "0   Bobby       Wyoming\n",
-       "1     Sue     Wisconsin\n",
-       "2  Tamika       Florida\n",
-       "3    Cale  South Dakota\n",
-       "4    Iris    Washington"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_temp = ptidy[['name','state']]\n",
-    "p_temp.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "An annoying situation arises, though, when you then try to change that new DataFrame: you get a `SettingWithCopyWarning`. *(Note that it actually performs the operation, but the warnings distract me when looking at the notebook because they look like an error.)*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/emonson/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:189: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n",
-      "/Users/emonson/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>YinJi</td>\n",
-       "      <td>Wyoming</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tamika</td>\n",
-       "      <td>Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cale</td>\n",
-       "      <td>South Dakota</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iris</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     name         state\n",
-       "0   YinJi       Wyoming\n",
-       "1     Sue     Wisconsin\n",
-       "2  Tamika       Florida\n",
-       "3    Cale  South Dakota\n",
-       "4    Iris    Washington"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_temp.loc[0,'name'] = \"YinJi\"\n",
-    "p_temp.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is to avoid a problem that can arise unexpectedly in certain situations where people think they're changing a value in a \"view\" of their original DataFrame, and really they're changing a value in a *copy* of a piece of their original DataFrame.\n",
-    "\n",
-    "So, if you drop columns by taking a subset, **you can get around this warning by explicitly telling Pandas you know you want to make a copy** during that subsetting operation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>YinJi</td>\n",
-       "      <td>Wyoming</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tamika</td>\n",
-       "      <td>Florida</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cale</td>\n",
-       "      <td>South Dakota</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iris</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     name         state\n",
-       "0   YinJi       Wyoming\n",
-       "1     Sue     Wisconsin\n",
-       "2  Tamika       Florida\n",
-       "3    Cale  South Dakota\n",
-       "4    Iris    Washington"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_temp = ptidy[['name','state']].copy()\n",
-    "p_temp.loc[0,'name'] = \"YinJi\"\n",
-    "p_temp.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Back to our names, states example\n",
+    "## Dropping the Null / NaN / NA state rows\n",
     "\n",
     "#### *NOTE: \"inplace\"*\n",
     "\n",
