--- a/PewExercise.ipynb
+++ b/PewExercise.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "#### Read in the data\n",
     "\n",
-    "- Read data in from the CSV file `pew-raw.csv` in the `./data/` directory, \n",
+    "- Read data in from the CSV file `pew-raw.csv` in the `data` directory, \n",
     "- and print out the table"
    ]
   },
@@ -105,7 +105,7 @@
     "- Now sort again, this time storing the values\n",
     "- this time **descending** by `\"freq\"` so the highest frequency values are at the top\n",
     "- *The default is NOT to sort \"in place\", so need to reassign to keep sorting results*\n",
-    "- Display the results\n"
+    "- Display the first 15 results\n"
    ]
   },
   {
