--- a/PewExerciseSolutions.ipynb
+++ b/PewExerciseSolutions.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -30,7 +28,7 @@
    "source": [
     "#### Read in the data\n",
     "\n",
-    "- Read data in from the CSV file `pew-raw.csv` in the `./data/` directory, \n",
+    "- Read data in from the CSV file `pew-raw.csv` in the `data` directory, \n",
     "- and print out the table"
    ]
   },
@@ -75,7 +73,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>27</td>\n",
        "      <td>34</td>\n",
@@ -85,7 +83,7 @@
        "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>12</td>\n",
        "      <td>27</td>\n",
@@ -95,7 +93,7 @@
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Buddhist</td>\n",
        "      <td>27</td>\n",
        "      <td>21</td>\n",
@@ -105,7 +103,7 @@
        "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>418</td>\n",
        "      <td>617</td>\n",
@@ -115,7 +113,7 @@
        "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Dont know/refused</td>\n",
        "      <td>15</td>\n",
        "      <td>14</td>\n",
@@ -125,7 +123,7 @@
        "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>575</td>\n",
        "      <td>869</td>\n",
@@ -135,7 +133,7 @@
        "      <td>1486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>Hindu</td>\n",
        "      <td>1</td>\n",
        "      <td>9</td>\n",
@@ -145,7 +143,7 @@
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>228</td>\n",
        "      <td>244</td>\n",
@@ -155,7 +153,7 @@
        "      <td>223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>Jehovahs Witness</td>\n",
        "      <td>20</td>\n",
        "      <td>27</td>\n",
@@ -165,7 +163,7 @@
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>Jewish</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
@@ -211,7 +209,7 @@
    ],
    "source": [
     "# Read in data from CSV file\n",
-    "df = pd.read_csv(\"./data/pew-raw.csv\")\n",
+    "df = pd.read_csv(\"data/pew-raw.csv\")\n",
     "\n",
     "# and display the original table\n",
     "df"
@@ -288,91 +286,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <td>30</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
+       "      <td>40</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
+       "      <td>50</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <td>20</td>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
+       "      <td>41</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <td>21</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>11</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <td>31</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
+       "      <td>51</td>\n",
        "      <td>Atheist</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
+       "      <td>42</td>\n",
        "      <td>Buddhist</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Buddhist</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <td>12</td>\n",
        "      <td>Buddhist</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>21</td>\n",
@@ -418,7 +416,7 @@
     "- Now sort again, this time storing the values\n",
     "- this time **descending** by `\"freq\"` so the highest frequency values are at the top\n",
     "- *The default is NOT to sort \"in place\", so need to reassign to keep sorting results*\n",
-    "- Display the results\n"
+    "- Display the first 15 results\n"
    ]
   },
   {
@@ -454,91 +452,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
+       "      <td>55</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>1486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
+       "      <td>53</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <td>25</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>1064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
+       "      <td>35</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
+       "      <td>45</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <td>15</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <td>23</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
+       "      <td>33</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <td>43</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <td>13</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Catholic</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <td>17</td>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <td>37</td>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <td>27</td>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>236</td>\n",
@@ -595,9 +593,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
