further modularization of lessons

--- a/MeltExercise.ipynb
+++ b/MeltExercise.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Melt Exercise\n",
+    "\n",
+    "Example taken from Tidy Data in Python\n",
+    "by [Jean-Nicholas Hould](http://www.jeannicholashould.com/) from the blog post of the same name\n",
+    "[http://www.jeannicholashould.com/tidy-data-in-python.html](http://www.jeannicholashould.com/tidy-data-in-python.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pew Research Center Dataset\n",
     "\n",
     "This dataset explores the relationship between income and religion.\n",
