final first workshop prep, plotting exercise

--- a/MeltExercise.ipynb
+++ b/MeltExercise.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Example taken from Tidy Data in Python\n",
     "by [Jean-Nicholas Hould](http://www.jeannicholashould.com/) from the blog post of the same name\n",
-    "[http://www.jeannicholashould.com/tidy-data-in-python.html](http://www.jeannicholashould.com/tidy-data-in-python.html)"
+    "[http://www.jeannicholashould.com/tidy-data-in-python.html](http://www.jeannicholashould.com/tidy-data-in-python.html)\n",
+    "\n",
+    "*Don't look yet, but the solutions are in [MeltExerciseSolutions](MeltExerciseSolutions.ipynb)*"
    ]
   },
   {
@@ -81,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "formatted_df = pd.m___"
+    "formatted_df = pd.____(__, ____, _____=\"income\", _____=\"freq\")"
    ]
   },
   {
@@ -128,7 +130,7 @@
     "formatted_df = formatted_df.s___\n",
     "\n",
     "# display the results\n",
-    "formatted_df"
+    "formatted_df.____(_)"
    ]
   }
  ],
