--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**This is one of the more common data manipulations to get to a tidy form!**\n",
     "\n",
-    "## Un-pivoting into tall format – a toy example\n",
+    "## Un-pivoting from wide into tall format – a toy example\n",
     "\n",
     "Many call this process of going from a wide data set to tall \"un-pivoting\" since a pivot table in Excel converts data from the tall format into wide. \n",
     "\n",
