--- a/bash_clone_repository.ipynb
+++ b/bash_clone_repository.ipynb
@@ -13,18 +13,16 @@
     "1. You need to run this command either in a terminal, which you can open from the Home page of your Jupyter instance (New -> Terminal) or using a Bash kernel (which the OIT Docker system has installed, but isn't installed by default by the Anaconda Python distribution).\n",
     "1. You need to run this from the root of your Jupyter space. If you do it here you'll just make another copy of the repository inside the repository folder.\n",
     "\n",
-    "Go to [my tidy-data-python github repository](https://github.com/emonson/tidy-data-python) and click on the green button that says \"Clone or download\". Copy the \"Clone with HTTPS\" URL and use the `git clone` command with a `bash` kernel to download the repository into your Jupyter space."
+    "Go to [my pandas-jupyterlab](https://github.com/emonson/pandas-jupyterlab) and click on the green button that says \"Clone or download\". Copy the \"Clone with HTTPS\" URL and use the `git clone` command with a `bash` kernel to download the repository into your Jupyter space."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "git clone https://github.com/emonson/tidy-data-python.git"
+    "git clone https://github.com/emonson/pandas-jupyterlab.git"
    ]
   }
  ],
@@ -44,9 +42,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
