--- a/TidyDataAdvanced.ipynb
+++ b/TidyDataAdvanced.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -76,11 +76,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>artist.inverted</th>\n",
+       "      <th>track</th>\n",
+       "      <th>time</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>date.entered</th>\n",
+       "      <th>date.peaked</th>\n",
+       "      <th>x1st.week</th>\n",
+       "      <th>x2nd.week</th>\n",
+       "      <th>x3rd.week</th>\n",
+       "      <th>...</th>\n",
+       "      <th>x67th.week</th>\n",
+       "      <th>x68th.week</th>\n",
+       "      <th>x69th.week</th>\n",
+       "      <th>x70th.week</th>\n",
+       "      <th>x71st.week</th>\n",
+       "      <th>x72nd.week</th>\n",
+       "      <th>x73rd.week</th>\n",
+       "      <th>x74th.week</th>\n",
+       "      <th>x75th.week</th>\n",
+       "      <th>x76th.week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Destiny's Child</td>\n",
+       "      <td>Independent Women Part I</td>\n",
+       "      <td>3:38</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-09-23</td>\n",
+       "      <td>2000-11-18</td>\n",
+       "      <td>78</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Santana</td>\n",
+       "      <td>Maria, Maria</td>\n",
+       "      <td>4:18</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-02-12</td>\n",
+       "      <td>2000-04-08</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Savage Garden</td>\n",
+       "      <td>I Knew I Loved You</td>\n",
+       "      <td>4:07</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>1999-10-23</td>\n",
+       "      <td>2000-01-29</td>\n",
+       "      <td>71</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Madonna</td>\n",
+       "      <td>Music</td>\n",
+       "      <td>3:45</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-08-12</td>\n",
+       "      <td>2000-09-16</td>\n",
+       "      <td>41</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Aguilera, Christina</td>\n",
+       "      <td>Come On Over Baby (All I Want Is You)</td>\n",
+       "      <td>3:38</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-08-05</td>\n",
+       "      <td>2000-10-14</td>\n",
+       "      <td>57</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Janet</td>\n",
+       "      <td>Doesn't Really Matter</td>\n",
+       "      <td>4:17</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-06-17</td>\n",
+       "      <td>2000-08-26</td>\n",
+       "      <td>59</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Destiny's Child</td>\n",
+       "      <td>Say My Name</td>\n",
+       "      <td>4:31</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>1999-12-25</td>\n",
+       "      <td>2000-03-18</td>\n",
+       "      <td>83</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Iglesias, Enrique</td>\n",
+       "      <td>Be With You</td>\n",
+       "      <td>3:36</td>\n",
+       "      <td>Latin</td>\n",
+       "      <td>2000-04-01</td>\n",
+       "      <td>2000-06-24</td>\n",
+       "      <td>63</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Sisqo</td>\n",
+       "      <td>Incomplete</td>\n",
+       "      <td>3:52</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>2000-06-24</td>\n",
+       "      <td>2000-08-12</td>\n",
+       "      <td>77</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Lonestar</td>\n",
+       "      <td>Amazed</td>\n",
+       "      <td>4:25</td>\n",
+       "      <td>Country</td>\n",
+       "      <td>1999-06-05</td>\n",
+       "      <td>2000-03-04</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 83 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year      artist.inverted                                  track  time  \\\n",
+       "0  2000      Destiny's Child               Independent Women Part I  3:38   \n",
+       "1  2000              Santana                           Maria, Maria  4:18   \n",
+       "2  2000        Savage Garden                     I Knew I Loved You  4:07   \n",
+       "3  2000              Madonna                                  Music  3:45   \n",
+       "4  2000  Aguilera, Christina  Come On Over Baby (All I Want Is You)  3:38   \n",
+       "5  2000                Janet                  Doesn't Really Matter  4:17   \n",
+       "6  2000      Destiny's Child                            Say My Name  4:31   \n",
+       "7  2000    Iglesias, Enrique                            Be With You  3:36   \n",
+       "8  2000                Sisqo                             Incomplete  3:52   \n",
+       "9  2000             Lonestar                                 Amazed  4:25   \n",
+       "\n",
+       "     genre date.entered date.peaked  x1st.week  x2nd.week  x3rd.week  \\\n",
+       "0     Rock   2000-09-23  2000-11-18         78       63.0       49.0   \n",
+       "1     Rock   2000-02-12  2000-04-08         15        8.0        6.0   \n",
+       "2     Rock   1999-10-23  2000-01-29         71       48.0       43.0   \n",
+       "3     Rock   2000-08-12  2000-09-16         41       23.0       18.0   \n",
+       "4     Rock   2000-08-05  2000-10-14         57       47.0       45.0   \n",
+       "5     Rock   2000-06-17  2000-08-26         59       52.0       43.0   \n",
+       "6     Rock   1999-12-25  2000-03-18         83       83.0       44.0   \n",
+       "7    Latin   2000-04-01  2000-06-24         63       45.0       34.0   \n",
+       "8     Rock   2000-06-24  2000-08-12         77       66.0       61.0   \n",
+       "9  Country   1999-06-05  2000-03-04         81       54.0       44.0   \n",
+       "\n",
+       "      ...      x67th.week  x68th.week  x69th.week  x70th.week  x71st.week  \\\n",
+       "0     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "1     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "2     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "3     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "4     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "5     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "6     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "7     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "8     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "9     ...             NaN         NaN         NaN         NaN         NaN   \n",
+       "\n",
+       "   x72nd.week  x73rd.week  x74th.week  x75th.week  x76th.week  \n",
+       "0         NaN         NaN         NaN         NaN         NaN  \n",
+       "1         NaN         NaN         NaN         NaN         NaN  \n",
+       "2         NaN         NaN         NaN         NaN         NaN  \n",
+       "3         NaN         NaN         NaN         NaN         NaN  \n",
+       "4         NaN         NaN         NaN         NaN         NaN  \n",
+       "5         NaN         NaN         NaN         NaN         NaN  \n",
+       "6         NaN         NaN         NaN         NaN         NaN  \n",
+       "7         NaN         NaN         NaN         NaN         NaN  \n",
+       "8         NaN         NaN         NaN         NaN         NaN  \n",
+       "9         NaN         NaN         NaN         NaN         NaN  \n",
+       "\n",
+       "[10 rows x 83 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"./data/billboard.csv\", encoding=\"mac_latin2\")\n",
+    "df = pd.read_csv(\"./data/billboard.csv\", encoding=\"mac_latin2\",dtype='str')\n",
     "df.head(10)"
    ]
   },
@@ -508,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
