clarified .copy() for SettingWithCopyWarning and updated split explode lists example for current versions

--- a/SplitExplodeLists.ipynb
+++ b/SplitExplodeLists.ipynb
@@ -356,9 +356,11 @@
     "\n",
     "It seems a bit strange to me that the Index doesn't have to be unique. (If you notice above, the index values are repeated along with each name.) That evidently affects the speed of lookup – unique Index values are faster – but it's allowed. \n",
     "\n",
-    "- Here I'd like to reset the index to a new range of integers. We'll do that with `df.reset_index()`. \n",
-    "- It's also a way to move the Index to a regular column, which comes in handy sometimes, too. \n",
-    "- Here I'll do it \"inplace\". \n",
+    "**I'd like to reset the index to a fresh sequential range of integers. We'll do that with `df.reset_index()`.**\n",
+    "\n",
+    "- It's also a way to move the Index to a regular column, which comes in handy sometimes. That is the default behavior.\n",
+    "- As I mention below, you can use the `drop=True` argument to throw the old Index away during the operation.\n",
+    "- Here I'll do the operation \"inplace\". \n",
     "\n",
     "**Remember to be careful with \"inplace\" operations, because you'll be writing over your original data!** "
    ]
@@ -508,7 +510,7 @@
    "source": [
     "## Dropping extra columns\n",
     "\n",
-    "With `.reset_index()` you have the option of dropping the index with `drop=True`, but I left it in since I also wanted to drop the original string states list column now that I'm sure things look okay.\n",
+    "With `.reset_index()` you have the option of dropping the old index with `drop=True`, but I left it in since I also wanted to drop the original string states list column now that I'm sure things look okay.\n",
     "\n",
     "**There are a couple ways we can get rid of, or *drop*, unwanted columns.** We can\n",
     "\n",
@@ -1047,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
